apps/observability/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      securityContext:
        runAsUser: 472
        runAsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:11.4.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/grafana.ini
              subPath: grafana.ini
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              subPath: provisioning-datasources.yaml
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: provisioning-dashboards.yaml
            - name: dash-mesh
              mountPath: /var/lib/grafana/dashboards/istio/istio-mesh-dashboard.json
              subPath: istio-mesh-dashboard.json
            - name: dash-service
              mountPath: /var/lib/grafana/dashboards/istio/istio-service-dashboard.json
              subPath: istio-service-dashboard.json
            - name: dash-workload
              mountPath: /var/lib/grafana/dashboards/istio/istio-workload-dashboard.json
              subPath: istio-workload-dashboard.json
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
      volumes:
        - name: config
          configMap:
            name: grafana-config
        - name: dash-mesh
          configMap:
            name: grafana-dashboards-mesh
        - name: dash-service
          configMap:
            name: grafana-dashboards-service
        - name: dash-workload
          configMap:
            name: grafana-dashboards-workload
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 3000
      targetPort: 3000
